--- a/index.html
+++ b/index.html
@@ -148,9 +148,156 @@ really want.</p>
      </div>
     <!-- Collection PART END -->
 
-    <!-- NAV PART START  -->
-    <!-- NAV PART END -->
-
+    <!-- Product PART START  -->
+     <section id="productPart">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5 m-auto">
+            <div class="commonTitle text-center">
+              <h3>OUR TRENDY <strong>PRODUCTS</strong></h3>
+            </div>
+            <div class="productA text-center">
+              <a href="#">ALL</a>
+              <a href="#">NEWARRIVALS</a>
+              <a href="#">BEST SELLER</a>
+              <a href="#">TOP RATING</a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3">
+            <div class="pImg mt-5">
+              <picture>
+                <img src="images/pOne.png" alt="pOne.png" width="100%">
+              </picture>
+              <div class="pText">
+                <h6>Dresses</h6>
+                <h4>Cropped Faux Leather Jacket</h4>
+                <h5>$29</h5>
+              </div>
+              <div class="heart">
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="pImg mt-5">
+              <picture>
+                <img src="images/pTwo.png" alt="pTwo.png" width="100%">
+              </picture>
+              <div class="pText">
+                <h6>Dresses</h6>
+                <h4>Calvin Shorts</h4>
+                <h5>$62</h5>
+              </div>
+              <div class="heart">
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="pImg mt-5">
+              <picture>
+                <img src="images/pThree.png" alt="pThree.png" width="100%">
+              </picture>
+              <div class="pText">
+                <h6>Dresses</h6>
+                <h4>Kirby T-Shirt</h4>
+                <h5>$17</h5>
+              </div>
+              <div class="heart">
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="pImg mt-5">
+              <picture>
+                <img src="images/pFour.png" alt="pFour.png" width="100%">
+              </picture>
+              <div class="pText">
+                <h6>Dresses</h6>
+                <h4>Cableknit Shawl</h4>
+                <h5><s>$129</s> <span class="red text-danger">$99</span></h5>
+              </div>
+              <div class="heart">
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="pImg mt-5">
+              <picture>
+                <img src="images/pFive.png" alt="pFive.png" width="100%">
+              </picture>
+              <div class="pText">
+                <h6>Dresses</h6>
+                <h4>Colorful Jacket</h4>
+                <h5>$29</h5>
+              </div>
+              <div class="heart">
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="pImg mt-5">
+              <picture>
+                <img src="images/pSix.png" alt="pSix.png" width="100%">
+              </picture>
+              <div class="pText">
+                <h6>Dresses</h6>
+                <h4>Shirt In Botanical Cheetah Print</h4>
+                <h5>$62</h5>
+              </div>
+              <div class="heart">
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="pImg mt-5">
+              <picture>
+                <img src="images/pSeven.png" alt="pSeven.png" width="100%">
+              </picture>
+              <div class="pText">
+                <h6>Dresses</h6>
+                <h4>Cotton Jersey T-Shirt</h4>
+                <h5>$17</h5>
+              </div>
+              <div class="heart">
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="pImg mt-5">
+              <picture>
+                <img src="images/pEight.png" alt="pEight.png" width="100%">
+              </picture>
+              <div class="pText">
+                <h6>Dresses</h6>
+                <h4>Zessi Dresses</h4>
+                <h5><s>$129</s> <span class="red text-danger">$99</span></h5>
+              </div>
+              <div class="heart">
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+        <div class="row">
+          <div class="col-lg-2 m-auto">
+            <div class="pEnd text-center">
+              <h5>SEE ALL PRODUCT</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+     </section>
+    <!-- Product PART END -->
+                                
     <!-- NAV PART START  -->
     <!-- NAV PART END -->
 
