--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <div class="bannerContent">
                 <h6>NEW TREND</h6>
                 <h1>SUMMER SALE STYLISH <b>WOMENS</b></h1>
-                <h5>DISCOVER MORE</h5>
+                <a href="#">DISCOVER MORE</a>
               </div>
             </div>
             <div class="col-lg-5 m-auto">
@@ -98,7 +98,7 @@
               <div class="collectionText">
               <h6>HOT LIST</h6>
               <h4><strong>WOMEN</strong> COLLECTION</h4>
-              <h5>SHOP NOW</h5>
+                <a href="#">SHOP NOW</a>
             </div>
             </div>
           </div>
@@ -110,7 +110,7 @@
               <div class="collectionText">
               <h6>HOT LIST</h6>
               <h4><strong>MEN</strong> COLLECTION</h4>
-              <h5>SHOP NOW</h5>
+              <a href="#">SHOP NOW</a>
             </div>
             </div>
             <div class="row">
@@ -122,7 +122,7 @@
                   <div class="collectionText">
               <h6>HOT LIST</h6>
               <h4><strong>KIDS</strong> COLLECTION</h4>
-              <h5>SHOP NOW</h5>
+              <a href="#">SHOP NOW</a>
             </div>
                 </div>
                 
@@ -137,7 +137,7 @@
               <h4><strong>E-GIFT</strong> CARDS</h4>
               <p>Surprise someone with the gift they 
 really want.</p>
-              <h5>DISCOVER MORE</h5>
+              <a href="#">DISCOVER MORE</a>
             </div>
                 </div>
               </div>
@@ -290,7 +290,7 @@ really want.</p>
         <div class="row">
           <div class="col-lg-2 m-auto">
             <div class="pEnd text-center">
-              <h5>SEE ALL PRODUCT</h5>
+              <a href="#">SEE ALL PRODUCT</a>
             </div>
           </div>
         </div>
@@ -298,11 +298,88 @@ really want.</p>
      </section>
     <!-- Product PART END -->
                                 
-    <!-- NAV PART START  -->
-    <!-- NAV PART END -->
+    <!-- Spring Collection PART START  -->
+     <section id="sCollectionPart">
+        <div class="container-fluid springBanner">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8">
+              <div class="scollectionText">
+                <h6>DEAL OF THE WEEK</h6>
+                <h1><STrong>SPRING</STrong> COLLECTION</h1>
+                <a href="#">SHOP NOW</a>
+              </div>
+            </div>
+          </div>
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="countDown">
+                  <div class="row">
+                    <div class="col-lg-3">
+                       <div class="countOne">
+                        <h5>05</h5>
+                        <h6>DAYS</h6>
+                       </div>
+                    </div>
+                    <div class="col-lg-3">
+                       <div class="countOne">
+                        <h5>07</h5>
+                        <h6>HOURS</h6>
+                       </div>
+                    </div>
+                    <div class="col-lg-3">
+                       <div class="countOne">
+                        <h5>09</h5>
+                        <h6>MINS</h6>
+                       </div>
+                    </div>
+                    <div class="col-lg-3">
+                       <div class="countOne noBorder">
+                        <h5>03</h5>
+                        <h6>SEC</h6>
+                       </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        </div>
+     </section>
+    <!-- Spring Collection PART END -->
 
-    <!-- NAV PART START  -->
-    <!-- NAV PART END -->
+    <!-- Mask Banner PART START  -->
+     <section id="maskBanner">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="maskImg">
+              <picture>
+                <img src="images/maskOne.png" alt="maskOne.png" width="100%">
+              </picture>
+               <div class="maskText">
+                <h6>STARTING AT $19</h6>
+                <h5>Women’s T-Shirts</h5>
+                <a href="#">SHOP NOW</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="maskImg">
+              <picture>
+                <img src="images/maskTwo.png" alt="maskTwo.png" width="100%">
+              </picture>
+              <div class="maskText">
+                <h6>STARTING AT $39</h6>
+                <h5>Men’s Sportswear</h5>
+                <a href="#">SHOP NOW</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+     </section>
+    <!-- Mask Banner PART END -->
 
     <!-- NAV PART START  -->
     <!-- NAV PART END -->
